# symbolic-execution

./: Cargo.toml  rust-toolchain
src/: context.rs  debug_info.rs  encoder.rs  execute.rs  function_call_snapshot.rs  havoc.rs  heap.rs  lib.rs  loop.rs  params.rs  path.rs  path_conditions.rs  pcs_interaction.rs  place.rs  predicate.rs  results.rs  semantics.rs  stmt.rs  terminator.rs  transform.rs  util.rs  value.rs  visualization.rs
src/rustc_interface/: mod.rs
