[package]
name = "symbolic-execution"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[lib]
doctest = false # we have no doc tests

[dependencies]
bumpalo = { version = "3.12.0", features = ["collections"] }
pcs = { path = "../pcs" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.64"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
